--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
         .card {
             display: flex;
             align-items: center;
+            font-family: dm sans;
+            font-size:5vh;
             justify-content: center;
             height: 30vh;
             width: 30vh;
-            background-color: rgb(168, 183, 183);
+            background-color: rgb(140, 166, 239);
             margin: 2vh;
             border-radius: 8px;
             cursor: pointer;
